test/tests/operators/write_all/08_error_unsupported_type.txt
error: field has unsupported type `int64`
 --> tests/operators/write_all/08_error_unsupported_type.tql:7:13
  |
7 |   write_all data
  |             ^^^^ 
  |
  = hint: `write_all` supports `string` and `blob` fields
